--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,18 +38,19 @@ jobs:
 
 workflows:
   version: 2
-  jobs:
-    - Hello-World
-    - Checkout-Code:
-        requires:
-          - Hello-World
-    - Run-with-Node:
-        requires:
-          - Checkout-Code
-    - Hold-For-Approval:
-        type: approval
-        requires:
-          - Run-with-Node
-    - Now-Complete:
-        requires:
-          - Hold-For-Approval
+  test_workflow:
+    jobs:
+      - Hello-World
+      - Checkout-Code:
+          requires:
+            - Hello-World
+      - Run-with-Node:
+          requires:
+            - Checkout-Code
+      - Hold-For-Approval:
+          type: approval
+          requires:
+            - Run-with-Node
+      - Now-Complete:
+          requires:
+            - Hold-For-Approval
